plugins {
    id 'java'
}

java {
    toolchain {
        version JavaLanguageVersion.of(17)
    }
}

group = 'com.bldrei'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
//    testCompileOnly 'org.projectlombok:lombok:1.18.30'
//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}
